services-networks/network-policies/ingress-NetPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-netpolicy
spec:
  podSelector:
    matchLabels:
      app: db
  ingress:      
  - from:
    - podSelector:
        matchLabels:
          app: web
          #    ports:
          #    - port: 80
